# llmintent

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.streamlit/: config.toml
apps/: README.md
docs/: LIVE_SUITE.md  MODEL_SUITE.md  PUBLISHING.md  SUITE.md
examples/: basic_steering.py  cognitive_kernels.py  cot_intensity.py  heighten_reasoning.py  hellaswag_benchmark.py  jspace_layer_thoughts.py  live_demo.py  query_concept.py  retracement_ablation.py  trajectory_mapping.py  viz_suite.py
llmintent_retraces/: hellaswag.jsonl  hellaswag_results.csv  retracement_ablation.csv
reference/: extracted_cells.py
scripts/: extract_notebook.py  publish.ps1  publish_to_github.bat  run_hellaswag_full.py  run_live_ui.ps1
src/llmintent/: __init__.py  __main__.py  activation.py  analyzer.py  causal_layers.py  cli.py  compaction.py  embeddings.py  forward.py  isolates.py  iv_motifs.py  latent.py  layers.py  metrics.py  models.py  morphemes.py  motifs.py  poles.py  projection.py  steering.py  suite_cli.py  svd.py  trajectory.py  weight_semantics.py
src/llmintent/benchmark/: __init__.py  ablation.py  hellaswag.py  retrace_store.py  runner.py  slm_registry.py
src/llmintent/cognitive/: __init__.py  ideation.py  identity.py  meta_reasoning.py  orchestrator.py  reasoning.py  types.py
src/llmintent/heighten/: __init__.py  cot_delta.py  extreme.py  focus.py  framework.py  intervention.py  retrace.py  types.py
src/llmintent/isolates/: __init__.py  __main__.py  causal.py
src/llmintent/isolates/_core/: __init__.py  cli.py  creativity.py  identify.py  layers.py  motifs.py  report.py  span_burst.py  trajectory.py  types.py  typology.py
src/llmintent/isolates/_core/backends/: __init__.py
src/llmintent/isolates/_core/causal/: __init__.py  features.py  iv_layers.py  suite.py
src/llmintent/jspace/: __init__.py  decode.py  decompose.py  regimes.py  trace.py  transport.py
src/llmintent/kernels/: __init__.py  barlow.py  kl_kernel.py
src/llmintent/latent_vendor/: __init__.py  probes.py  report.py  rule_backend.py  sae_lite.py  types.py
src/llmintent/live/: __init__.py  activation_stream.py  api.py  generate.py  pipeline.py  registry.py  session.py  types.py  ui.py  viz_panel.py
src/llmintent/query/: __init__.py  concept_query.py  feature_space.py
src/llmintent/retracement/: __init__.py  ablation.py  blocks.py  config.py  perplexity.py  transformer.py
src/llmintent/suite/: __init__.py  loader.py  registry.py  resolve.py
src/llmintent/viz/: __init__.py  animate.py  backend.py  correlation.py  maps.py  suite.py
tests/: test_activation_stream.py  test_barlow_repeat.py  test_benchmark.py  test_cognitive.py  test_heighten.py  test_isolates.py  test_jspace.py  test_live.py  test_live_viz_panel.py  test_metrics.py  test_morphemes.py  test_query.py  test_retracement.py  test_suite.py  test_suite_imports.py  test_viz.py
