[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmintent"
version = "0.4.0"
description = "Semantic extraction and intent analysis for transformer LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kineteq Research" }]
keywords = ["llm", "semantic-extraction", "transformers", "intent", "steering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.0",
  "transformers>=4.40",
]

[project.optional-dependencies]
nlp = ["stanza>=1.8", "spacy>=3.7"]
embeddings = ["gensim>=4.3"]
viz = ["matplotlib>=3.8", "seaborn>=0.13"]
dev = ["pytest>=8.0", "ruff>=0.4"]
all = ["llmintent[nlp,embeddings,viz,dev]"]

[project.scripts]
llmintent = "llmintent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
